fix2
Fix selected back-quoted string's  highlight background-color invisible.
Maybe this will import other bugs. Let's see in the future.

--- a/styles/languages/gfm.less
+++ b/styles/languages/gfm.less
@@ -60,8 +60,6 @@
 
   .syntax--raw {
     color: @red;
-    border: 1px solid mix(@code-background, @string-quoted-double, 90%);
-    background-color: mix(@code-background, @string-quoted-double, 90%);
     border-radius: 3px;
   }
 }
